@@ -158,5 +158,10 @@ Version 0.0.1:
 157/ Implemented outro attack function for synergy mod item.
 158/ Added in "CustomDataValue" for projectile which basically act like ai[3].
 159/ Added in a weapon guide value and make it functional.
-160/ Added in a sneaky secret for chaotic prefix
-161/ Minor buff to The Underdog (34 -> 24 use time) and The Underdog have life steal effect when under 25% health
+160/ Added in a sneaky secret for chaotic prefix.
+161/ Minor buff to The Underdog (34 -> 24 use time) and The Underdog have life steal effect when under 25% health.
+162/ Buff Handmade Launcher projectile to now shatter into many fragments upon explosion.
+163/ Change Generic Black Sword sword ring condition.
+164/ De-synergy Katahanced now to be extra weapon and slight change to weapon itself.
+165/ Added new sprite for Draining Veil Blade ( also change name Draining Veil to Draining Veil Blade )
+166/ Added in common texture call "Wave"
